--- a/thighdle.html
+++ b/thighdle.html
@@ -186,13 +186,15 @@
     <div id="page-play">
         <h1>Thighdle</h1>
         <h2>Who is this champion?</h2>
+        <p>Image zooms out every failed attempt</p>
 
         <canvas id="myCanvas" width="350" height="220"></canvas>
         <br>
-        <button>Zoom out</button>
-        <br>
         <input type="text" list="champions">
-        
+        <br>
+        <button>Answer</button>
+        <br>
+        <p>You have already tried the following champions : <span id="faillist">null</span></p>
     </div>
 </body>
 </html>
