--- a/thighdle.html
+++ b/thighdle.html
@@ -190,7 +190,7 @@
         <h2>Who is this champion?</h2>
         <p>Image zooms out every failed attempt</p>
 
-        <canvas id="myCanvas" width="350" height="220"></canvas>
+        <canvas id="playfield-canvas" width="350" height="220"></canvas>
         <br>
         <input type="text" list="champions">
         <br>
